# boxes

./: CMakeLists.txt  build.bat  run.bat
assets/models/: lorry.glb  lorry.mtl  weel.glb  weel.mtl
assets/shaders/: model.fs  model.vs
src/: main.cpp
src/core/: Application.cpp  Application.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
src/graphics/: Camera.cpp  Camera.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h
src/scene/: GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
